deploy: 763d1a4c6a25465c5aa459b2e9170ec6d64c57f2

--- a/index.html
+++ b/index.html
@@ -244,13 +244,6 @@
 <div class=swiper-wrapper>
 <div class=swiper-slide>
 <div class=brand-item>
-<a href=https://dessia.tech/ target=_blank>
-<img loading=lazy decoding=async class=img-fluid width=469 height=145 src=/images/brands/dessia_hub4a47ebf05c56ecb372c00e7de913291_16451_469x0_resize_q90_h2_box_3.webp alt="Brand Image" onerror="this.onerror=null,this.src='/images/brands/dessia_hub4a47ebf05c56ecb372c00e7de913291_16451_469x0_resize_box_3.png'">
-</a>
-</div>
-</div>
-<div class=swiper-slide>
-<div class=brand-item>
 <a href=https://www.inria.fr/ target=_blank>
 <img loading=lazy decoding=async class=img-fluid width=309 height=135 src=/images/brands/inria_huea8cd64f9c797e5ccc1539c9b581a327_8118_309x0_resize_q90_h2_box_3.webp alt="Brand Image" onerror="this.onerror=null,this.src='/images/brands/inria_huea8cd64f9c797e5ccc1539c9b581a327_8118_309x0_resize_box_3.png'">
 </a>
@@ -260,6 +253,13 @@
 <div class=brand-item>
 <a href=https://quantstack.net/ target=_blank>
 <img loading=lazy decoding=async class=img-fluid width=409 height=105 src=/images/brands/quantstack_hu9faac9cd701cd51503e070bf5f04d2e8_9689_409x0_resize_q90_h2_box_3.webp alt="Brand Image" onerror="this.onerror=null,this.src='/images/brands/quantstack_hu9faac9cd701cd51503e070bf5f04d2e8_9689_409x0_resize_box_3.png'">
+</a>
+</div>
+</div>
+<div class=swiper-slide>
+<div class=brand-item>
+<a href=https://www.ssg-aero.com/ target=_blank>
+<img loading=lazy decoding=async class=img-fluid width=598 height=273 src=/images/brands/ssg-aero_hud9322ab524280668888a423169701ee8_8407_598x0_resize_q90_h2_box_3.webp alt="Brand Image" onerror="this.onerror=null,this.src='/images/brands/ssg-aero_hud9322ab524280668888a423169701ee8_8407_598x0_resize_box_3.png'">
 </a>
 </div>
 </div>
