--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <head>
 <meta charset=utf-8>
 <title>twiinIT</title>
-<base href=https://twiinit.github.io/>
+<base href=https://twiinit.com/>
 <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=5">
 <meta name=description content="This is meta description">
 <meta name=author content="Themefisher">
-<meta name=generator content="Hugo 0.92.1">
+<meta name=generator content="Hugo 0.92.2">
 <link rel="shortcut icon" href=/images/favicon_hu495ee8dec35a1d60ea979029b0cfbc76_2312_32x0_resize_box_3.png type=image/x-icon>
 <link rel=icon href=/images/favicon_hu495ee8dec35a1d60ea979029b0cfbc76_2312_32x0_resize_box_3.png type=image/x-icon>
 <link rel=icon type=image/png sizes=16x16 href=/images/favicon_hu495ee8dec35a1d60ea979029b0cfbc76_2312_16x0_resize_box_3.png>
@@ -20,7 +20,7 @@
 <meta property="og:title" content>
 <meta property="og:description" content="This is meta description">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://twiinit.github.io/">
+<meta property="og:url" content="https://twiinit.com/">
 <meta name=twitter:card content="summary">
 <meta name=twitter:title content>
 <meta name=twitter:description content="This is meta description">
@@ -83,7 +83,7 @@
 </li>
 </ul>
 <div class=navbar-right>
-<a href=https://lab.twiinit.com/ class="btn btn-primary" target=_blank>Try our tools!</a>
+<a href=https://hub.twiinit.com/ class="btn btn-primary" target=_blank>Try our tools!</a>
 </div>
 </div>
 </nav>
@@ -99,7 +99,6 @@
 <div class="block row justify-content-center no-gutters" data-aos=fade-up>
 <div class="col-lg-10 px-0 px-xl-4" data-rellax-speed=-3>
 <h1 class=mb-4 data-aos=fade-up>Leveraging Collaboration in Systems Engineering</h1>
-<a href=# class="btn btn-primary" data-aos=fade-up data-aos-delay=200>Our Vision</a>
 </div>
 </div>
 <div class=has-circle>
@@ -113,55 +112,6 @@
 <span class="circle-8 ratio-37" data-rellax-speed=-.5></span>
 <span class="circle-9 ratio-20 fill" data-rellax-speed=1></span>
 <span class="circle-10 ratio-65 fill" data-rellax-speed=-2></span>
-</div>
-</div>
-</div>
-</div>
-</section>
-<section class="section features overflow-hidden" id=services>
-<div class=container>
-<div class=row>
-<div class=col-lg-12 data-aos=fade-up>
-<div class="section-title text-center">
-<p class=text-uppercase>Services</p>
-<h2 class=title>What we provide</h2>
-<p></p>
-</div>
-</div>
-</div>
-<div class=row>
-<div class=col-lg-12 data-aos=fade-left data-aos-delay=200>
-<div class="features-carousel swiper-container">
-<div class="swiper-wrapper align-items-center">
-<div class=swiper-slide>
-<div class=features-card>
-<div class="icon text-primary">
-<i class="las la-magnet"></i>
-</div>
-<h3 class=title>Magnetic Turning</h3>
-<p class=mb-0>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Neque enim id diam ornare volutpat in sagitis, aliquet. Arcu cursus</p>
-</div>
-</div>
-<div class=swiper-slide>
-<div class=features-card>
-<div class="icon text-primary">
-<i class="las la-tachometer-alt"></i>
-</div>
-<h3 class=title>Secured & up-to-date</h3>
-<p class=mb-0>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Neque enim id diam ornare volutpat in sagitis, aliquet. Arcu cursus</p>
-</div>
-</div>
-<div class=swiper-slide>
-<div class=features-card>
-<div class="icon text-primary">
-<i class="las la-lock"></i>
-</div>
-<h3 class=title>Updated Security</h3>
-<p class=mb-0>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Neque enim id diam ornare volutpat in sagitis, aliquet. Arcu cursus</p>
-</div>
-</div>
-</div>
-<div class=swiper-pagination></div>
 </div>
 </div>
 </div>
@@ -252,7 +202,7 @@
 <div class=swiper-slide>
 <div class=brand-item>
 <a href=https://quantstack.net/ target=_blank>
-<img loading=lazy decoding=async class=img-fluid width=409 height=105 src=/images/brands/quantstack_hu9faac9cd701cd51503e070bf5f04d2e8_9689_409x0_resize_q90_h2_box_3.webp alt="Brand Image" onerror="this.onerror=null,this.src='/images/brands/quantstack_hu9faac9cd701cd51503e070bf5f04d2e8_9689_409x0_resize_box_3.png'">
+<img loading=lazy decoding=async class=img-fluid width=409 height=140 src=/images/brands/quantstack_hud7bb34bddd246019bbd810ac3269a414_13841_409x0_resize_q90_h2_box_3.webp alt="Brand Image" onerror="this.onerror=null,this.src='/images/brands/quantstack_hud7bb34bddd246019bbd810ac3269a414_13841_409x0_resize_box_3.png'">
 </a>
 </div>
 </div>
@@ -283,7 +233,7 @@
 <div class=mb-4>
 <h3>Send A Message</h3>
 </div>
-<form id=contact-form action=https://formspree.io/ method=post>
+<form id=contact-form action=https://formspree.io/f/mqknqebr method=post>
 <p id=form-status class=form-status></p>
 <div class=form-group>
 <label for=name>Full Name</label>
