--- a/404.html
+++ b/404.html
@@ -2,11 +2,11 @@
 <head>
 <meta charset=utf-8>
 <title>404 Page not found</title>
-<base href=https://twiinit.github.io/>
+<base href=https://twiinit.com/>
 <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=5">
 <meta name=description content="This is meta description">
 <meta name=author content="Themefisher">
-<meta name=generator content="Hugo 0.92.1">
+<meta name=generator content="Hugo 0.92.2">
 <link rel="shortcut icon" href=/images/favicon_hu495ee8dec35a1d60ea979029b0cfbc76_2312_32x0_resize_box_3.png type=image/x-icon>
 <link rel=icon href=/images/favicon_hu495ee8dec35a1d60ea979029b0cfbc76_2312_32x0_resize_box_3.png type=image/x-icon>
 <link rel=icon type=image/png sizes=16x16 href=/images/favicon_hu495ee8dec35a1d60ea979029b0cfbc76_2312_16x0_resize_box_3.png>
@@ -20,7 +20,7 @@
 <meta property="og:title" content="404 Page not found">
 <meta property="og:description" content="This is meta description">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://twiinit.github.io/404.html">
+<meta property="og:url" content="https://twiinit.com/404.html">
 <meta name=twitter:card content="summary">
 <meta name=twitter:title content="404 Page not found">
 <meta name=twitter:description content="This is meta description">
@@ -82,7 +82,7 @@
 </li>
 </ul>
 <div class=navbar-right>
-<a href=https://lab.twiinit.com/ class="btn btn-primary" target=_blank>Try our tools!</a>
+<a href=https://hub.twiinit.com/ class="btn btn-primary" target=_blank>Try our tools!</a>
 </div>
 </div>
 </nav>
